examples/invalid/03_offer_missing_type_annotation.lane
module Examples.Invalid03
// invalid: offered value definitions must include an explicit type annotation
pub offer constants = Constants::{ answer: 42 }

pub struct Constants {
  answer : Int
}
